--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: todo-backend:latest
+          image: faby495/todo-backend:latest
           ports:
             - containerPort: 4000
