--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: faby495/todo-frontend:lates
+          image: faby495/todo-frontend:latest
           ports:
             - containerPort: 80
