--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/todo-app.git
+    repoURL: https://github.com/f11v/App.git
     targetRevision: HEAD
     path: k8s
   destination:
